Implemented All Tests!