@@ -4,6 +4,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -14,9 +15,10 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @Profile("dev")
@@ -26,7 +28,10 @@ public class SecurityConfigDev {
     private final UserDetailsService userDetailsService;
     private final JwtFilter jwtFilter;
 
-    public SecurityConfigDev(UserDetailsService userDetailsService, JwtFilter jwtFilter) {
+    public SecurityConfigDev(
+            UserDetailsService userDetailsService,
+            JwtFilter jwtFilter
+    ) {
         this.userDetailsService = userDetailsService;
         this.jwtFilter = jwtFilter;
     }
@@ -35,29 +40,136 @@ public class SecurityConfigDev {
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
                 .csrf(csrf -> csrf.disable())
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(
+                                SessionCreationPolicy.STATELESS
+                        )
+                )
+
+                .exceptionHandling(exception ->
+                        exception.authenticationEntryPoint(
+                                new HttpStatusEntryPoint(
+                                        HttpStatus.UNAUTHORIZED
+                                )
+                        )
+                )
+
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/auth/v1/login", "/swagger-ui/**", "/v3/api-docs/**", "/error", "/api/test/v1").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/user/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.POST, "/api/user/v1").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/user/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/user/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/api/ceo/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.POST, "/api/ceo/v1").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/ceo/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/ceo/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/api/service_orders/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.POST, "/api/service_orders/v1").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.PUT, "/api/service_orders/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/service_orders/v1/**").hasRole("ADMIN")
-                        .requestMatchers(HttpMethod.GET, "/api/service_order_photos/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.POST, "/api/service_order_photos/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.PUT, "/api/service_order_photos/v1/**").hasAnyRole("ADMIN", "FIELD_TECHNICIAN")
-                        .requestMatchers(HttpMethod.DELETE, "/api/service_order_photos/v1/**").hasRole("ADMIN")
+                        .requestMatchers(
+                                "/api/auth/v1/login",
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/error",
+                                "/api/test/v1"
+                        ).permitAll()
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/user/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.POST,
+                                "/api/user/v1"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.PUT,
+                                "/api/user/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.DELETE,
+                                "/api/user/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/ceo/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.POST,
+                                "/api/ceo/v1"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.PUT,
+                                "/api/ceo/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.DELETE,
+                                "/api/ceo/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/service_orders/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.POST,
+                                "/api/service_orders/v1"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.PUT,
+                                "/api/service_orders/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.DELETE,
+                                "/api/service_orders/v1/**"
+                        ).hasRole("ADMIN")
+
+                        .requestMatchers(
+                                HttpMethod.GET,
+                                "/api/service_order_photos/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.POST,
+                                "/api/service_order_photos/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.PUT,
+                                "/api/service_order_photos/v1/**"
+                        ).hasAnyRole(
+                                "ADMIN",
+                                "FIELD_TECHNICIAN"
+                        )
+
+                        .requestMatchers(
+                                HttpMethod.DELETE,
+                                "/api/service_order_photos/v1/**"
+                        ).hasRole("ADMIN")
+
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
+
+                .addFilterBefore(
+                        jwtFilter,
+                        UsernamePasswordAuthenticationFilter.class
+                )
+
                 .build();
     }
 
@@ -67,14 +179,23 @@ public class SecurityConfigDev {
     }
 
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider provider = new DaoAuthenticationProvider(userDetailsService);
-        provider.setPasswordEncoder(passwordEncoder());
+    DaoAuthenticationProvider authenticationProvider(
+            PasswordEncoder passwordEncoder
+    ) {
+        DaoAuthenticationProvider provider =
+                new DaoAuthenticationProvider(userDetailsService);
+
+        provider.setPasswordEncoder(passwordEncoder);
+
         return provider;
     }
 
     @Bean
-    public AuthenticationManager authenticationManager() {
-        return new ProviderManager(Collections.singletonList(authenticationProvider()));
+    AuthenticationManager authenticationManager(
+            DaoAuthenticationProvider authenticationProvider
+    ) {
+        return new ProviderManager(
+                List.of(authenticationProvider)
+        );
     }
 }
